<resources>
    <string name="app_name">chat</string>

    <string name="chat_chat">聊天</string>
    <string name="chat_friends">好友</string>

    <string name="chat_search_contact">搜索联系人</string>
    <string name="chat_new_friend">新的朋友</string>
    <string name="chat_label">标签</string>
    <string name="chat_my_chat_groups">我的群聊</string>
    <string name="chat_star_friends">星标好友</string>
    <string name="chat_contact">联系人</string>

    <!--Label-->
    <string name="chat_all_labels">所有标签</string>
    <string name="chat_create">新建</string>
    <string name="chat_no_label">暂无标签</string>
    <string name="chat_add_label_speard_friends">你可以通过给朋友添加标签来进行分类</string>
    <string name="chat_create_label">新建标签</string>
    <string name="chat_select_friend">选择联系人</string>
    <string name="chat_ok_1">确定(%1$s)</string>
    <string name="chat_edit_label">编辑标签</string>
    <string name="chat_save">保存</string>
    <string name="chat_label_name">标签名字</string>
    <string name="chat_label_example">例如家人、朋友</string>
    <string name="chat_label_member">成员</string>
    <string name="chat_delete_label">删除标签</string>


    <string name="chat_add_memo">添加备注</string>
    <string name="chat_more_info">更多信息</string>
    <string name="chat_send_msg">发送消息</string>

    <string name="chat_group_chat">群聊</string>

    <string name="chat_take_photo">拍照</string>
    <string name="chat_select_from_album">手机相册选择</string>
    <string name="chat_cancel">取消</string>
    <string name="chat_ok">确定</string>

</resources>
