<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_1d_26_37"
    android:orientation="vertical">

    <include
        layout="@layout/layout_top_bar"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/llEmpty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="190dp"
        android:paddingBottom="130dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/chat_no_label"
            android:textColor="@color/color_ff_ff_ff"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/chat_add_label_speard_friends"
            android:textColor="@color/color_7c_84_98"
            android:paddingTop="30dp"
            android:layout_weight="1"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnAddLabel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/color_ff_ff_ff"
            android:background="@drawable/bg_chat_add_label"
            android:textSize="15sp"
            android:text="@string/chat_create_label"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

    </LinearLayout>

</LinearLayout>