<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_25_2e_3f"
    android:orientation="vertical">

    <include layout="@layout/layout_top_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="11dp"
        android:paddingRight="20dp"
        android:orientation="horizontal"
        android:paddingBottom="20.5dp">

        <com.alsc.chat.view.RoundRectImageView
            android:id="@+id/ivAvatar"
            android:layout_width="46dp"
            android:layout_height="46dp"
            app:round_radius="23" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="19dp"
            android:paddingTop="6dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/tvNick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/color_fe_fe_fe"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_7c_84_98"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="地区：亚洲 新加坡"
                android:textColor="@color/color_7c_84_98"
                android:textSize="12sp" />


        </LinearLayout>

        <ImageView
            android:id="@+id/ivStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:src="@drawable/chat_star" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_1d_26_37" />


    <TextView
        android:id="@+id/tvAddMemo"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:drawableRight="@drawable/chat_right_arrow"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/chat_add_memo"
        android:textColor="@color/color_7c_84_98"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_1d_26_37" />

    <TextView
        android:id="@+id/tvMore"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:drawableRight="@drawable/chat_right_arrow"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/chat_more_info"
        android:textColor="@color/color_7c_84_98"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/color_1d_26_37" />

    <LinearLayout
        android:id="@+id/llSendMsg"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/chat_send_msg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:text="@string/chat_send_msg"
            android:textColor="@color/color_ff_ff_ff"
            android:textSize="15sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_1d_26_37" />


</LinearLayout>